cleaned up dashboard using partials

--- a/app/views/parents/_rewards.html.erb
+++ b/app/views/parents/_rewards.html.erb
@@ -4,9 +4,9 @@
     <% @rewards.each do |r| %>
     <%= r.name %>
     <% end %>
-    <p id="button" class="test">Add Rewards</p>
+    <div class="test btn-add-object">Add Rewards</div>
     <!-- The Modal -->
-    <div id="taskModal" class="modal">
+    <div class="modal">
       <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
