styled playground layout

--- a/app/assets/stylesheets/pages/_playground.scss
+++ b/app/assets/stylesheets/pages/_playground.scss
@@ -5,3 +5,10 @@
   padding: 15px;
   border-radius: 5px;
 }
+
+.all-rewards {
+  background: rgba(241, 242, 245, 0.85);
+  padding: 10px;
+  margin: 20px;
+  border-radius: 20px;
+}
