added 1set of seeds

--- a/app/views/parents/dashboard.html.erb
+++ b/app/views/parents/dashboard.html.erb
@@ -15,7 +15,7 @@
                     <ul>
                         <%  @tasks.each do |t| %>
                         <!-----button---->
-                        <p id="button" class="test">
+                        <p class="test">
                             <%= t.objective %>
                         </p>
                         <!-- The Modal -->
