--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,18 +1,39 @@
 .btn-add-object {
-  width: 150px;
-  border: 1px solid black;
-  text-align: center;
-  border-radius: 3px;
-  padding: 5px;
+    width: 150px;
+    border: 1px solid black;
+    text-align: center;
+    border-radius: 3px;
+    padding: 5px;
+    background-color: rgb(124, 190, 49);
+    color: white;
+    font-weight: bold;
 
-  a {
-    color: #333;
-    &:hover {
-      text-decoration: none;
+    a {
+        color: #333;
+        color: white;
+        font-weight: bold;
+
+        &:hover {
+            text-decoration: none;
+        }
     }
-  }
 
-  &:hover {
-    opacity: 0.7;
-  }
+    &:hover {
+        opacity: 0.7;
+    }
+}
+
+
+
+.test {
+    text-align:center;
+    border: 1px solid black;
+    max-width: 150px;
+    padding: 5px;
+    border-radius: 5px;
+
+    &:hover {
+      background-color:white;
+      font-weight:bold;
+    }
 }
