--- a/app/assets/stylesheets/pages/_playground.scss
+++ b/app/assets/stylesheets/pages/_playground.scss
@@ -1,9 +1,13 @@
 .task-details {
-  display: block;
-  background: rgba(0,0,0,0.3);
-  width: 25%;
+  display: none;
+  border: 1px solid black;
+  border-radius: 3px;
+  width: 30%;
   padding: 15px;
-  border-radius: 5px;
+}
+
+.task-list {
+  list-style: none;
 }
 
 .all-rewards {
@@ -11,4 +15,22 @@
   padding: 10px;
   margin: 20px;
   border-radius: 20px;
+}
+
+.task-name {
+  padding: 10px;
+  width: 150px;
+  transition: ease-in-out 250ms;
+  &:hover {
+    cursor: pointer;
+    font-weight: bold;
+  }
+}
+
+.active-task {
+  font-weight: bold;
+}
+
+.visible-task-details {
+  display: block;
 }
