--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,6 +1,5 @@
 .btn-add-object {
     width: 150px;
-    border: 1px solid black;
     text-align: center;
     border-radius: 3px;
     padding: 5px;
@@ -9,7 +8,6 @@
     font-weight: bold;
 
     a {
-        color: #333;
         color: white;
         font-weight: bold;
 
@@ -19,6 +17,7 @@
     }
 
     &:hover {
+        cursor:pointer;
         opacity: 0.7;
     }
 }
@@ -27,13 +26,11 @@
 
 .test {
     text-align:center;
-    border: 1px solid black;
     max-width: 150px;
     padding: 5px;
     border-radius: 5px;
 
     &:hover {
-      background-color:white;
       font-weight:bold;
     }
 }
