--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,66 +1,69 @@
 <div class="homepage-banner" style="background-image: url('<%= cl_image_path 'painful_grownup' %>')">
-
-  <div class="container banner-text">
-<h3>Working hard to become a better parent?</h3>
-<h5>When your children are blah blah blah annoyed, distracted, bored, unwilling to complete their tasks, we've got you covered blah blah. Help your child to become a better being.</h5>
-<%= link_to new_parent_registration_path do %>
-Get Started
-<% end %>
-
+    <div class="banner-text">
+        <h3>Working hard to become a better parent?</h3>
+        <h5>When your children are blah blah blah annoyed, distracted, bored, unwilling to complete their tasks, we've got you covered blah blah. Help your child to become a better being.</h5>
+        <div>
+        <%= link_to new_parent_registration_path do %>
+        <h5>Get Started</h5>
+        <% end %></div>
+    </div>
 </div>
-</div>
-
-
 <div class="container">
-  <div class="img-group">
-    <div class="row">
-        <!-- one col is one photo or one text box -->
-        <div class="img-text-combo">
-            <div class="col-xs-12 col-sm-6">
-                <%= cl_image_tag 'chicken_teamwork.gif', class: 'img-gifs' %>
+    <div class="img-group-odd">
+        <div class="row">
+            <!-- one col is one photo or one text box -->
+            <div class="img-text-combo">
+                <div class="col-xs-12 col-sm-6">
+                    <%= cl_image_tag 'chicken_teamwork.gif', class: 'img-gifs' %>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <div class="text-card">
+                        <h5>Team up and share the work with your children.</h5>
+                    </div>
+                </div>
             </div>
-            <div class="col-xs-12 col-sm-6">
-                <div class="text-card">
-                    <h5>Team up and share the work with your children.</h5>
+        </div>
+        <div class="row">
+            <!-- one col is one photo or one text box -->
+            <div class="img-text-combo">
+                <div class="col-xs-12 col-sm-6">
+                    <div class="text-card">
+                        <h5>Get the job done and have more time to yourself.</h5>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <%= cl_image_tag 'playful_grownup.gif', class: 'img-gifs' %>
                 </div>
             </div>
         </div>
     </div>
-  </div>
-  <div class="img-group-odd">
-    <div class="row">
-        <!-- one col is one photo or one text box -->
-        <div class="img-text-combo">
-            <div class="col-xs-12 col-sm-6">
-                <div class="text-card">
-                    <h5>Get the job done and have more time to yourself.</h5>
+    <div class="img-group-last">
+        <div class="row">
+            <div class="img-text-combo">
+                <div class="col-xs-12 col-sm-6">
+                    <%= cl_image_tag 'better_parent.gif', class: 'img-gifs last-gif' %>
                 </div>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <%= cl_image_tag 'playful_grownup.gif', class: 'img-gifs' %>
-            </div>
-        </div>
-    </div>
-  </div>
-
-  <div class="img-group">
-    <div class="row">
-        <div class="img-text-combo">
-            <div class="col-xs-12 col-sm-6">
-                <%= cl_image_tag 'better_parent.gif', class: 'img-gifs' %>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <div class="text-card">
-                    <h5>Spend more quality time together!</h5>
+                <div class="col-xs-12 col-sm-6">
+                    <div class="text-card">
+                        <h5>Spend more quality time together!</h5>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-  </div>
-
-
-  <div class="homepage-footer">
-
-  </div>
 </div>
-
+<div class="homepage-footer text-center" style="background: rgba(251, 232, 230, 0.8);">
+    <div class="social-links">
+        <%= icon('fab', 'instagram') %>
+        <%= icon('fab', 'github') %>
+        <%= icon('fab', 'twitter') %>
+        <%= icon('fab', 'line') %>
+        <%= icon('fab', 'facebook') %>
+    </div>
+    <div class="more-info">
+      <h6>About us</h6>
+      <h6>Blog</h6>
+      <h6>Press</h6>
+      <h6>Contact</h6>
+    </div>
+</div>
