fixed dependencies, ajax now able to change html on reward reqs, but loop limits the change to only the first item

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -3,11 +3,11 @@
 }
 
 .each-child {
-    width: 80%;
     border-bottom: 10px solid black;
 }
 
-.child-rewards, .submission-details {
+.child-rewards,
+.submission-details {
     margin: 10px;
     padding: 10px 20px;
 }
