--- a/app/views/parents/dashboard.html.erb
+++ b/app/views/parents/dashboard.html.erb
@@ -2,25 +2,27 @@
 <!-- add child button, children list with status -->
 <!-- create task button, mandatory tasks list -->
 <!-- create reward button, daily rewards list  -->
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-md-4">
-            <h2>Welcome!</h2>
-            <h5><%= current_parent.name %> (<%= current_parent.email %>)</h5>
-        </div>
-        <div class="tasks-info">
-            <div class="col-xs-6 col-md-4">
-                <%= render 'tasks' %>
+<div class="dashboard-wrapper">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-md-4">
+                <h2>Welcome!</h2>
+                <h5><%= current_parent.name %> (<%= current_parent.email %>)</h5>
             </div>
-        </div>
-        <div class="rewards-info">
-            <div class="col-xs-6 col-md-4">
-                <%= render 'rewards' %>
+            <div class="tasks-info">
+                <div class="col-xs-6 col-md-4">
+                    <%= render 'tasks' %>
+                </div>
             </div>
-        </div>
-        <div class="children-info">
-            <div class="col-xs-12">
-                <%= render 'children' %>
+            <div class="rewards-info">
+                <div class="col-xs-6 col-md-4">
+                    <%= render 'rewards' %>
+                </div>
+            </div>
+            <div class="children-info">
+                <div class="col-xs-12">
+                    <%= render 'children' %>
+                </div>
             </div>
         </div>
     </div>
