ajax now works for different rewards, next step is to change integer state to readable string msg

--- a/app/views/reward_requests/create.js.erb
+++ b/app/views/reward_requests/create.js.erb
@@ -1,5 +1,5 @@
 function requestReward(requestHTML) {
-  const state = document.getElementById("reward-request-state");
+  const state = document.getElementById("<%= @reward.name %>-request-state");
   // console.log(state);
   // console.log(state.innerHTML);
   state.innerHTML = requestHTML;
