--- a/app/views/children/_rewards.html.erb
+++ b/app/views/children/_rewards.html.erb
@@ -14,7 +14,7 @@
               <% end %>
 
                 <% if reward.reward_requests.any? %>
-                   <div id="reward-request-state">(last request: <%= reward.reward_requests.last.state %>)</div>
+                   <div id="<%= reward.name %>-request-state">(last request: <%= reward.reward_requests.last.state %>)</div>
                 <% end %>
 
             <% end %>
