--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -6,7 +6,12 @@
     border-bottom: 10px solid black;
 }
 
-.child-rewards,
+.each-request {
+  border-right: 1px dashed black;
+  padding: 10px;
+}
+
+.child-wishlist,
 .submission-details {
     margin: 10px;
     padding: 10px 20px;
@@ -18,6 +23,7 @@
 
 }
 
-.child-rewards {
+.child-wishlist {
     background: yellow;
+    display: flex;
 }
