--- a/app/assets/stylesheets/pages/_playground.scss
+++ b/app/assets/stylesheets/pages/_playground.scss
@@ -34,3 +34,14 @@
 .visible-task-details {
   display: none;
 }
+
+.btn-make-submission {
+  background: rgba(#fbc000, 0.7);
+  padding: 5px;
+  text-align: center;
+  border-radius: 5px;
+  &:hover {
+    cursor: pointer;
+    background: rgba(#fbc000, 1);
+  }
+}
