--- a/app/views/reward_requests/create.js.erb
+++ b/app/views/reward_requests/create.js.erb
@@ -1,10 +1,12 @@
-function requestReward(requestHTML) {
-  const state = document.getElementById("<%= @reward.name %>-request-state");
-  // console.log(state);
-  // console.log(state.innerHTML);
+function requestReward(requestHTML, unlinkHTML) {
+  const state = document.getElementById("<%= @reward.name.strip %>-request-state");
+  const requestLink = document.getElementById("reward-request-link");
   state.innerHTML = requestHTML;
+  requestLink.innerHTML = unlinkHTML;
 }
 
 <% unless @reward_request.errors.any? %>
-  requestReward("(Submitted, current state: Pending)");
+  requestReward("(Submitted, current state: Pending)", "<%= @reward.name %>");
 <% end %>
+
+
