--- a/app/views/children/_rewards.html.erb
+++ b/app/views/children/_rewards.html.erb
@@ -5,26 +5,33 @@
         <% if current_child.tasks.select(&:mandatory).any? && current_child.tasks.select(&:mandatory).all? {|task| task.task_submissions.any? ? task.task_submissions.last.state == 1 : false } %>
         <% current_child.rewards.select(&:daily).each do |reward| %>
         <div class="each-reward">
-            <% if reward.reward_requests.last.state == 0 %>
-            <%= reward.name %>
-            - Pending...
+          <% if reward.reward_requests.any? %>
+              <% if reward.reward_requests.last.state == 0 %>
+                <%= reward.name %>
+                --- Pending...
 
-            <% elsif !reward.claimed %>
-            <div id="reward-request-link">
-              <%= link_to reward_reward_requests_path(reward), remote: true, method: :post do %>
-              <%= reward.name %>
+              <% elsif !reward.claimed %>
+                <div id="<%= reward.name.strip.split[0] %>-request-link">
+                  <%= link_to reward_reward_requests_path(reward), remote: true, method: :post do %>
+                  <%= reward.name %>
+                  <% end %>
+                </div>
+
+              <% else %>
+                <%= reward.name %>
+                --- Claimed!
               <% end %>
-            </div>
 
-
-            <% else %>
-            <%= reward.name %>
-            - Claimed!
-            <% end %>
-            <% if reward.reward_requests.any? %>
-            <div id="<%= reward.name.strip %>-request-state">(last request:
-                <%= reward.reward_requests.last.state %>)</div>
-            <% end %>
+              <div id="<%= reward.name.strip.split[0] %>-request-state">(last request:
+                  <%= reward.reward_requests.last.state %>)
+              </div>
+          <% else %>
+          <div id="reward-request-link">
+                  <%= link_to reward_reward_requests_path(reward), remote: true, method: :post do %>
+                  <%= reward.name %>
+                  <% end %>
+                </div>
+          <% end %>
         </div>
         <% end %>
         <% else %>
